syntax = "proto3";

package currency_rate;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "CurrencyRate";

message CurrencyUpdateRequest {
  string amount = 1;
  string base_currency = 2;
  string target_currency = 3; 
}

message CurrencyUpdateResponse {
  bool success = 1;
  string error = 2;  
}

service CurrencyRate {
  rpc UpdateCurrency(CurrencyUpdateRequest) returns (CurrencyUpdateResponse);
}